# Parallel-For

benchmark/: CMakeLists.txt  main.cpp
include/: parallelloops.hpp
tests/: CMakeLists.txt  main.cpp  simpletest.hpp
